# PokerNowLogConverter

./: .gitignore  .pylintrc  LICENSE.TXT  README.md  __main__.py  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  package.yml
src/poker_now_log_converter/: action.py  card.py  game.py  hand.py  main.py  player.py  seat.py  utils.py
tests/: generate_test_outputs.py  test_basic_addition.py  test_lib_process_file.py  test_utils.py
tests/input_examples/: Input_Log_001.txt  Input_Log_002.csv
tests/output_examples/: Converted_Log_001.txt  Converted_Log_002.txt
