[metadata]
name = poker_now_log_converter
version = 0.0.1
author = Charles Tudor
author_email = mail@ctudor.net
description = A simple command line utility for converting logs from PokerNow games to other formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/charlestudor/PokerNowLogConverter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src