[metadata]
name = poker_now_log_converter
version = 0.0.10
author = Charles Tudor
author_email = mail@ctudor.net
description = A simple command line utility for converting logs from Poker Now games to other formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/charlestudor/PokerNowLogConverter
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
max-line-length = 120